--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "firebase": "^10.12.1",
     "react": "18.2.0",
     "react-native": "0.72.3",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-image-picker": "^7.1.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-modal": "^13.0.1",
