--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "firebase": "^10.12.1",
     "react": "18.2.0",
     "react-native": "0.72.3",
+    "react-native-create-thumbnail": "^2.0.0",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-image-picker": "^7.1.2",
     "react-native-linear-gradient": "^2.8.3",
@@ -37,6 +38,7 @@
     "react-native-svg": "^15.3.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.1.0",
+    "react-native-video": "^6.1.2",
     "react-redux": "^9.1.2"
   },
   "devDependencies": {
