--- a/android/build.gradle
+++ b/android/build.gradle
@@ -15,11 +15,27 @@ buildscript {
     repositories {
         google()
         mavenCentral()
+        maven {
+            url 'https://dl.google.com/dl/android/maven2'
+        }
+        maven { url 'https://www.jitpack.io' }
+
+    }
+    subprojects {
+        afterEvaluate { project ->
+            if (project.hasProperty('android')) {
+                project.android {
+                    if (namespace == null) {
+                        namespace project.group
+                    }
+                }
+            }
+        }
     }
     dependencies {
         // classpath("com.android.tools.build:gradle")
         classpath("com.facebook.react:react-native-gradle-plugin")
         classpath 'com.google.gms:google-services:4.4.1'
-        classpath 'com.android.tools.build:gradle:4.2.0'
+        classpath 'com.android.tools.build:gradle:8.0.1'
     }
 }
