--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native-stack": "^6.9.26",
     "react": "18.2.0",
     "react-native": "0.72.3",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
