--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "firebase": "^10.12.1",
     "react": "18.2.0",
     "react-native": "0.72.3",
+    "react-native-image-crop-picker": "^0.41.1",
+    "react-native-image-picker": "^7.1.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-modal": "^13.0.1",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
