--- a/android/build.gradle
+++ b/android/build.gradle
@@ -22,4 +22,9 @@ buildscript {
         classpath 'com.google.gms:google-services:4.4.1'
         classpath 'com.android.tools.build:gradle:4.2.0'
     }
+    java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(19) // Phiên bản Java mong muốn (ví dụ: Java 11)
+    }
+}
 }
