--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@reduxjs/toolkit": "^2.2.5",
+    "aws-sdk": "^2.1637.0",
     "firebase": "^10.12.1",
     "react": "18.2.0",
     "react-native": "^0.72.14",
