--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-linear-gradient": "^2.8.3",
     "react-native-modal": "^13.0.1",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
+    "react-native-pager-view": "^6.3.1",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
     "react-native-simple-toast": "^3.3.1",
