--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-native-modal": "^13.0.1",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-pager-view": "^6.3.1",
+    "react-native-picker": "^4.3.7",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
     "react-native-simple-toast": "^3.3.1",
