--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/react-native-fontawesome": "^0.3.0",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/cli-platform-android": "^13.6.8",
+    "@react-native-community/datetimepicker": "^8.1.0",
     "@react-native-firebase/app": "^20.0.0",
     "@react-native-firebase/firestore": "^20.0.0",
     "@react-navigation/bottom-tabs": "^6.5.20",
@@ -36,7 +37,6 @@
     "react-native-modal": "^13.0.1",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-pager-view": "^6.3.1",
-    "react-native-picker": "^4.3.7",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
     "react-native-simple-toast": "^3.3.1",
