--- a/package.json
+++ b/package.json
@@ -27,13 +27,13 @@
     "@react-navigation/native-stack": "^6.9.26",
     "@reduxjs/toolkit": "^2.2.5",
     "aws-sdk": "^2.1637.0",
+    "date-fns": "^3.6.0",
     "firebase": "^10.12.1",
     "react": "18.2.0",
     "react-native": "^0.72.14",
     "react-native-create-thumbnail": "^2.0.0",
     "react-native-document-picker": "^9.3.0",
     "react-native-dropdown-picker": "^5.4.6",
-    "react-native-linear-gradient": "^2.8.3",
     "react-native-modal": "^13.0.1",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-pager-view": "^6.3.1",
