--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-native": "^0.72.14",
     "react-native-create-thumbnail": "^2.0.0",
     "react-native-document-picker": "^9.3.0",
+    "react-native-dotenv": "^3.4.11",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-modal": "^13.0.1",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
